--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
@@ -14,6 +14,7 @@
     font-weight: 400;
     text-transform: none;
     color: #ccc !important;
+    padding-top: 16px;
 }
 
 .libraryViewNav .ui-btn-active {
@@ -97,13 +98,41 @@ h1, h1 a {
     background: #1c1c1c;
 }
 
-.libraryViewNavLinkContent {
-    padding-top: 4px;
-}
-
 .libraryMenuButtonText {
     position: absolute;
-    left: 0;
-    right: 0;
+    left: 100px;
+    right: 100px;
     text-align: center;
+    font-size: 16px;
+    margin: 0 auto !important;
+}
+
+.libraryViewNav .material-icons {
+    display: block;
+    margin-top: -5px;
+    font-size: 14px;
+}
+
+paper-button[raised].submit {
+    background: none !important;
+    color: #2ad !important;
+    border: 1px solid #2ad !important;
+}
+
+paper-button[raised].more {
+    background: none !important;
+    color: orange !important;
+    border: 1px solid orange !important;
+}
+
+paper-button[raised].secondary {
+    background: none !important;
+    color: green !important;
+    border: 1px solid green !important;
+}
+
+paper-button[raised].cancel {
+    background: none !important;
+    color: #666 !important;
+    border: 1px solid #666 !important;
 }
