update bravia profiles

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -423,7 +423,7 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
 }
 
 .lnkNextItem {
-    right: 0;
+    right: 10px;
 }
 
 .detailImageContainer {
