--- a/MediaBrowser.WebDashboard/dashboard-ui/css/chromecast.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/chromecast.css
@@ -1,39 +1,19 @@
-﻿.btnDefaultCast .btnCastImageActive {
-    display: none;
-}
-
-.btnActiveCast .btnCastImageDefault {
-    display: none;
-}
-
-.btnActiveCast i {
+﻿.btnActiveCast {
     color: #2ad !important;
-}
-
-.btnDisabledCast .btnCastImageActive {
-    display: none;
-}
-
-.btnDisabledCast i {
-    color: #555;
 }
 
 .headerSelectedPlayer {
     display: inline-block;
     vertical-align: middle;
     color: #ddd;
-    font-size: 11px;
-    margin-right: .5em;
+    /*font-size: 11px;*/
+    font-weight: 400;
     position: relative;
-    top: 1px;
+    top: 2px;
     max-width: 100px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-}
-
-.btnCastIcon .headerSelectedPlayer {
-    top: 0;
 }
 
 @media all and (max-width: 600px) {
