--- a/MediaBrowser.WebDashboard/dashboard-ui/css/mediaplayer.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/mediaplayer.css
@@ -1,6 +1,6 @@
 ﻿/* Now playing bar */
 .nowPlayingBar {
-    padding: 0;
+    padding: 8px 0;
     border-top: 1px solid #444;
     text-align: center;
 }
@@ -11,16 +11,30 @@
 
 .mediaButton, .nowPlayingBarUserDataButtons .btnUserItemRating {
     vertical-align: middle;
-    font-size: 30px;
     color: #e8e8e8;
     margin: 0;
-    padding: 16px 12px;
-    min-width: 30px;
     text-align: center;
 }
 
+    .mediaButton:not(paper-icon-button) {
+        padding: 16px 12px;
+    }
+
+paper-icon-button.mediaButton {
+    padding: 4px;
+}
+
+.mediaButton iron-icon {
+    height: 48px;
+    width: 48px;
+}
+
+.mediaButton.remoteControlButton iron-icon {
+    height: 30px;
+}
+
 .videoTopControls .mediaButton {
-    font-size: 26px;
+    font-size: 27px;
 }
 
 .videoControls .mediaButton {
@@ -75,7 +89,7 @@
 }
 
     .nowPlayingImage img {
-        height: 50px;
+        height: 60px;
         margin-right: .5em;
         vertical-align: bottom;
     }
@@ -169,6 +183,11 @@ input[type="range"]::-ms-fill-upper {
     .remoteControlButton, .nowPlayingBar .unpauseButton, .nowPlayingBar .pauseButton {
         float: right;
         padding-top: 0;
+    }
+
+    .remoteControlButton {
+        position: relative;
+        top: 4px;
     }
 
     .nowPlayingBar .currentTime, .nowPlayingBar .positionSliderContainer, .nowPlayingBar .volumeSliderContainer, #nowPlayingBar .muteButton, #nowPlayingBar .unmuteButton {
