update login page

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -28,7 +28,7 @@
 }
 
 .viewMenuBar .material-icons, .viewMenuBar .fa, .viewMenuBar paper-icon-button {
-    color: #f0f0f0;
+    color: #fff;
     vertical-align: middle;
 }
 
