update remote controls

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/nowplaying.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/nowplaying.css
@@ -3,13 +3,9 @@
 }
 
     .nowPlayingPage .btnCommand, .nowPlayingPage .btnPlayStateCommand {
-        text-align: center;
-        font-size: 24px;
-        padding: 14px 0;
         margin: 2px 1px;
         width: 70px;
-        background: #383838;
-        border-radius: 2px;
+        height: 70px;
     }
 
 .nowPlayingPageImage img {
